--- a/Templets/views/profile.hbs
+++ b/Templets/views/profile.hbs
@@ -327,10 +327,10 @@
 
                     <div id="Laxmilant_varkal">
                         <span><b>
-                                <?php echo $_SESSION['name']?>
+                                {{post.name}}
                             </b></span>
                         <p style="font-size:13px;color:black">
-                            <?php echo $_SESSION['mail']?>
+                            {{post.email}}
                         </p>
                     </div>
                 </div>
@@ -351,28 +351,35 @@
                         <td>username</td>
                         <td>:</td>
                         <td>
-                            <?php echo $_SESSION['name']?>
+                            {{post.name}}
                         </td>
                     </tr>
                     <tr>
                         <td>email</td>
                         <td>:</td>
                         <td>
-                            <?php echo $_SESSION['mail']?>
+                            {{post.email}}
                         </td>
                     </tr>
                     <tr>
                         <td>authontication</td>
                         <td>:</td>
                         <td>
-                            <?php echo $_SESSION['status']?>
+                            none
                         </td>
                     </tr>
                     <tr>
-                        <td>subject</td>
+                        <td>roll no.</td>
                         <td>:</td>
                         <td>
-                            <?php echo $_SESSION['subject']?>
+                            {{post.roll}}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>contact</td>
+                        <td>:</td>
+                        <td>
+                            {{post.phone}}
                         </td>
                     </tr>
 
