--- a/Templets/views/profile.hbs
+++ b/Templets/views/profile.hbs
@@ -220,7 +220,7 @@
 
                         <div class="topbar-divider d-none d-sm-block"></div>
 
-                        <!-- Nav Item - User Information -->
+                        <! Nav Item - User Information >
             <li class="nav-item dropdown no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
@@ -237,7 +237,7 @@
                     </svg>
 
                 </a>
-                <!-- Dropdown - User Information -->
+                <!-- Dropdown - User Information>
 
             </li>
 
@@ -314,7 +314,7 @@
                 }
             </style>
             <!-- Begin Page Content -->
-            <div class="container-fluid">
+            <div class="container-fluid" style="margin-top: 10%;">
                 <div style="display: inline;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="84" height="84" viewBox="0 0 86 84"
                         style="float:left; margin-right:10px">
@@ -440,12 +440,12 @@
     </div>
     <!-- End of Page Wrapper -->
 
-    <!-- Scroll to Top Button-->
+    <!-- Scroll to Top Button>
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
-    </a>
+    </a-->
 
-    <!-- Logout Modal-->
+    <!-- Logout Modal>
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -463,7 +463,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
 
     <!-- Bootstrap core JavaScript-->
     <script src="http://akshu.epizy.com/app/vendor/jquery/jquery.min.js"></script>
