--- a/Templets/views/error401.hbs
+++ b/Templets/views/error401.hbs
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <script data-ad-client="ca-pub-3480726176874215" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <meta name="google-site-verification" content="wIH-Hg8BBE56o0t28tiIhNpERKGEo4ve0hdnhTAZIBM" />
   <!-- Theme Made By www.w3schools.com -->
   <title>how to manage android devices</title>
   <meta name="description" content="how to manage android device">
@@ -368,7 +370,7 @@
         <a class="navbar-brand" href="#myPage"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right" style="background-color: #5d68ff00;">
+        <ul class="nav navbar-nav navbar-right" style="background-color: #4652ff00;">
           <li><a href="#home">Home</a></li>
           <li><a href="#setting">setting</a></li>
           <li><a href="#gamer">gamers</a></li>
@@ -689,13 +691,13 @@
     </div>
   </div>
   </div>
-  <div class="container">
+  <!--div class="container">
     <div class="row m">
       <div class="col-sm-6 slideanim"><img src="6.jpg" class="i"></div>
       <div class="col-sm-4 slideanim"><img src="7.jpg" class="i"></div>
     </div>
 
-  </div>
+  </div-->
   <div class="container-fluid">
     <p>
       Closing a running app manually helps with battery life, but Apple and Google have recently debunked that
@@ -951,7 +953,7 @@
     </p>
 
   </div>
-  <div class="container">
+  <!--div class="container">
     <div class="row r">
       <div class="col-sm-4 slideanim"><img src="1.png" class="i"></div>
       <div class="col-sm-4 slideanim"><img src="2.png" class="i"></div>
@@ -969,7 +971,7 @@
       <div class="col-sm-4 slideanim"><img src="4.png" class="i"></div>
     </div>
 
-  </div>
+  </div-->
   <br>
   <br>
 
