--- a/Templets/views/error401.hbs
+++ b/Templets/views/error401.hbs
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <script data-ad-client="ca-pub-3480726176874215" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-3480726176874215" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <meta name="google-site-verification" content="wIH-Hg8BBE56o0t28tiIhNpERKGEo4ve0hdnhTAZIBM" />
   <!-- Theme Made By www.w3schools.com -->
   <title>how to manage android devices</title>
@@ -384,7 +385,7 @@
     </div>
   </nav>
 
-  <div class="jumbotron text-center" style="background-image: url(register.png);">
+  <div class="jumbotron text-center" style="background-image: url(register.png);background:rgb(58, 58, 255)">
     <h1>Android</h1>
     <p> how to manage Android device </p>
   </div>
